fixed: changed margin on collapse

--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -13,7 +13,7 @@
 
 
     .collapse {
-      width: 100%;
+      width: 90%;
       margin-left: 20px;
       margin-right: 20px;
     }
